test/scc_test/stmt/semantic-errors/032.a
032.t:6:9: error: a declaration may only be used within a block